[package]
name = "bevy_isometric_rendering_demo"
version = "0.1.0"
authors = ["Alexander Krivács Schrøder <alexschrod@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
anyhow = "1.0"

[profile.dev.package.bevy]
opt-level = 3
